fixed scrollbar on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,6 +74,10 @@ a:visited {
   height: 5.2rem;
   align-self: center;
   margin-bottom: 4rem;
+
+  @media (max-width: 992px) {
+    margin-bottom: 2rem;
+  }
 }
 
 .workouts {
@@ -81,10 +85,6 @@ a:visited {
   overflow-y: scroll;
   overflow-x: hidden;
   margin-bottom: 2rem;
-}
-
-.workouts::-webkit-scrollbar {
-  width: 0;
 }
 
 .workout {
